// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button blue button 1`] = `
<a
  className="button_tk8a3j-o_O-blue_8qkqhj"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button gold button 1`] = `
<a
  className="button_tk8a3j-o_O-gold_13p1uyi"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button green button 1`] = `
<a
  className="button_tk8a3j-o_O-green_8j7jxn"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Button red button 1`] = `
<a
  className="button_tk8a3j-o_O-red_1u3r2w"
  onClick={undefined}
>
  <span
    className="text_f1191h-o_O-LabelLarge_19qk49e"
    style={Object {}}
  >
    Hello, world!
  </span>
</a>
`;

exports[`Storyshots Color All colors 1`] = `
<div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      blue
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#1865F2",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#1865F2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#1865F2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#1865F2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#1865F2",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      green
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#00A60E",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#00A60E",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#00A60E",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#00A60E",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#00A60E",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      gold
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FFB100",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#FFB100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#FFB100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#FFB100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#FFB100",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      red
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#D92916",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#D92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#D92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#D92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#D92916",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      offBlack
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#21242C",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#21242C",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#21242C",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#21242C",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#21242C",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      offBlack64
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "rgba(33, 36, 44, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "rgba(33, 36, 44, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "rgba(33, 36, 44, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "rgba(33, 36, 44, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      offBlack50
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.5)",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "rgba(33, 36, 44, 0.5)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "rgba(33, 36, 44, 0.5)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "rgba(33, 36, 44, 0.5)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "rgba(33, 36, 44, 0.5)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      offBlack32
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.32)",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "rgba(33, 36, 44, 0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "rgba(33, 36, 44, 0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "rgba(33, 36, 44, 0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "rgba(33, 36, 44, 0.32)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      offBlack16
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.16)",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "rgba(33, 36, 44, 0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "rgba(33, 36, 44, 0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "rgba(33, 36, 44, 0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "rgba(33, 36, 44, 0.16)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      offBlack8
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.08)",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "rgba(33, 36, 44, 0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "rgba(33, 36, 44, 0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "rgba(33, 36, 44, 0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "rgba(33, 36, 44, 0.08)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      offWhite
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#F7F8FA",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#F7F8FA",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#F7F8FA",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#F7F8FA",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      white
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#FFFFFF",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#FFFFFF",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#FFFFFF",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#FFFFFF",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      white64
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(255, 255, 255, 0.64)",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "rgba(255, 255, 255, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "rgba(255, 255, 255, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "rgba(255, 255, 255, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "rgba(255, 255, 255, 0.64)",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      darkBlue
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#0A2A66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#0A2A66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#0A2A66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#0A2A66",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      teal
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#00E5AE",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#00E5AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#00E5AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#00E5AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#00E5AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      lightBlue
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#37C5FD",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#37C5FD",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#37C5FD",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#37C5FD",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#37C5FD",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "height": 40,
      }
    }
  >
    <div
      style={
        Object {
          "width": 100,
        }
      }
    >
      pink
      :
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#FA50AE",
          "height": 30,
          "marginRight": 10,
          "width": 30,
        }
      }
    />
    <div
      style={
        Object {
          "backgroundColor": "#FFFFFF",
          "color": "#FA50AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#F7F8FA",
          "color": "#FA50AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "rgba(33, 36, 44, 0.64)",
          "color": "#FA50AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
    <div
      style={
        Object {
          "backgroundColor": "#0A2A66",
          "color": "#FA50AE",
          "padding": 10,
        }
      }
    >
      Hello world!
    </div>
  </div>
</div>
`;

exports[`Storyshots Core all 1`] = `
<div>
  <span
    className="text_f1191h"
    style={Object {}}
  >
    Text
  </span>
  <div
    className=""
    style={Object {}}
  >
    View
  </div>
</div>
`;

exports[`Storyshots Core nested text inherits color 1`] = `
<div>
  <div
    className="blue_1tsdo2i"
    style={Object {}}
  >
    <span
      className="text_f1191h"
      style={Object {}}
    >
      Text
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/Text aphrodite styles 1`] = `
<span
  className="text_f1191h-o_O-pink_th4aeu"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/Text multiple Aphrodite styles 1`] = `
<span
  className="text_f1191h-o_O-pink_th4aeu-o_O-bold_hq5slr"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/Text multiple text elements 1`] = `
<div>
  <span
    className="text_f1191h-o_O-bold_hq5slr"
    style={Object {}}
  >
    Text
  </span>
  <span
    className="text_f1191h-o_O-pink_th4aeu"
    style={Object {}}
  >
    Text
  </span>
</div>
`;

exports[`Storyshots Core/Text text 1`] = `
<span
  className="text_f1191h"
  style={Object {}}
>
  Text
</span>
`;

exports[`Storyshots Core/View aphrodite styles 1`] = `
<div
  className="pink_th4aeu"
  style={Object {}}
>
  View
</div>
`;

exports[`Storyshots Core/View multiple Aphrodite styles 1`] = `
<div
  className="pink_th4aeu-o_O-bold_hq5slr"
  style={Object {}}
>
  Text
</div>
`;

exports[`Storyshots Core/View multiple view elements 1`] = `
<div>
  <div
    className="bold_hq5slr"
    style={Object {}}
  >
    Text
  </div>
  <div
    className="pink_th4aeu"
    style={Object {}}
  >
    Text
  </div>
</div>
`;

exports[`Storyshots Core/View view 1`] = `
<div
  className=""
  style={Object {}}
>
  View
</div>
`;

exports[`Storyshots Typography all 1`] = `
<div>
  <div>
    <h1
      className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_pg0x2d"
      style={Object {}}
    >
      Title
    </h1>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-Tagline_13wg9ps"
      style={Object {}}
    >
      Tagline
    </span>
  </div>
  <div>
    <h2
      className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1wo4u3q"
      style={Object {}}
    >
      HeadingLarge
    </h2>
  </div>
  <div>
    <h3
      className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_3zbco9"
      style={Object {}}
    >
      HeadingMedium
    </h3>
  </div>
  <div>
    <h4
      className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_1vtz1kj"
      style={Object {}}
    >
      HeadingSmall
    </h4>
  </div>
  <div>
    <h4
      className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_3f6s5f"
      style={Object {}}
    >
      HeadingXSmall
    </h4>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-BodySerifBlock_1q1y0lf"
      style={Object {}}
    >
      BodySerifBlock
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-BodySerif_czdgjk"
      style={Object {}}
    >
      BodySerif
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-BodyMonospace_1s34hz9"
      style={Object {}}
    >
      BodyMonospace
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-Body_aye3wz"
      style={Object {}}
    >
      Body
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-LabelLarge_19qk49e"
      style={Object {}}
    >
      LabelLarge
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-LabelMedium_1y2bm6p"
      style={Object {}}
    >
      LabelMedium
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-LabelSmall_xwaspk"
      style={Object {}}
    >
      LabelSmall
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-LabelXSmall_1ot4900"
      style={Object {}}
    >
      LabelXSmall
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-Caption_1d6h637"
      style={Object {}}
    >
      Caption
    </span>
  </div>
  <div>
    <span
      className="text_f1191h-o_O-Footnote_1h6ehge"
      style={Object {}}
    >
      Footnote
    </span>
  </div>
</div>
`;

exports[`Storyshots Typography/Body as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Body_aye3wz"
  style={Object {}}
>
  Body
</h5>
`;

exports[`Storyshots Typography/Body default 1`] = `
<span
  className="text_f1191h-o_O-Body_aye3wz"
  style={Object {}}
>
  Body
</span>
`;

exports[`Storyshots Typography/Body light on dark 1`] = `
<span
  className="text_f1191h-o_O-Body_aye3wz-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  Body
</span>
`;

exports[`Storyshots Typography/BodyMonospace as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-BodyMonospace_1s34hz9"
  style={Object {}}
>
  BodyMonospace
</h5>
`;

exports[`Storyshots Typography/BodyMonospace default 1`] = `
<span
  className="text_f1191h-o_O-BodyMonospace_1s34hz9"
  style={Object {}}
>
  BodyMonospace
</span>
`;

exports[`Storyshots Typography/BodyMonospace light on dark 1`] = `
<span
  className="text_f1191h-o_O-BodyMonospace_1s34hz9-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  BodyMonospace
</span>
`;

exports[`Storyshots Typography/BodySerif as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-BodySerif_czdgjk"
  style={Object {}}
>
  BodySerif
</h5>
`;

exports[`Storyshots Typography/BodySerif default 1`] = `
<span
  className="text_f1191h-o_O-BodySerif_czdgjk"
  style={Object {}}
>
  BodySerif
</span>
`;

exports[`Storyshots Typography/BodySerif light on dark 1`] = `
<span
  className="text_f1191h-o_O-BodySerif_czdgjk-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  BodySerif
</span>
`;

exports[`Storyshots Typography/BodySerifBlock as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-BodySerifBlock_1q1y0lf"
  style={Object {}}
>
  BodySerifBlock
</h5>
`;

exports[`Storyshots Typography/BodySerifBlock default 1`] = `
<span
  className="text_f1191h-o_O-BodySerifBlock_1q1y0lf"
  style={Object {}}
>
  BodySerifBlock
</span>
`;

exports[`Storyshots Typography/BodySerifBlock light on dark 1`] = `
<span
  className="text_f1191h-o_O-BodySerifBlock_1q1y0lf-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  BodySerifBlock
</span>
`;

exports[`Storyshots Typography/Caption as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Caption_1d6h637"
  style={Object {}}
>
  Caption
</h5>
`;

exports[`Storyshots Typography/Caption default 1`] = `
<span
  className="text_f1191h-o_O-Caption_1d6h637"
  style={Object {}}
>
  Caption
</span>
`;

exports[`Storyshots Typography/Caption light on dark 1`] = `
<span
  className="text_f1191h-o_O-Caption_1d6h637-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  Caption
</span>
`;

exports[`Storyshots Typography/Footnote as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Footnote_1h6ehge"
  style={Object {}}
>
  Footnote
</h5>
`;

exports[`Storyshots Typography/Footnote default 1`] = `
<span
  className="text_f1191h-o_O-Footnote_1h6ehge"
  style={Object {}}
>
  Footnote
</span>
`;

exports[`Storyshots Typography/Footnote light on dark 1`] = `
<span
  className="text_f1191h-o_O-Footnote_1h6ehge-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  Footnote
</span>
`;

exports[`Storyshots Typography/HeadingLarge as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1wo4u3q"
  style={Object {}}
>
  HeadingLarge
</h5>
`;

exports[`Storyshots Typography/HeadingLarge default 1`] = `
<h2
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1wo4u3q"
  style={Object {}}
>
  HeadingLarge
</h2>
`;

exports[`Storyshots Typography/HeadingLarge light on dark 1`] = `
<h2
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingLarge_1wo4u3q-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  HeadingLarge
</h2>
`;

exports[`Storyshots Typography/HeadingMedium as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_3zbco9"
  style={Object {}}
>
  HeadingMedium
</h5>
`;

exports[`Storyshots Typography/HeadingMedium default 1`] = `
<h3
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_3zbco9"
  style={Object {}}
>
  HeadingMedium
</h3>
`;

exports[`Storyshots Typography/HeadingMedium light on dark 1`] = `
<h3
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingMedium_3zbco9-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  HeadingMedium
</h3>
`;

exports[`Storyshots Typography/HeadingSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_1vtz1kj"
  style={Object {}}
>
  HeadingSmall
</h5>
`;

exports[`Storyshots Typography/HeadingSmall default 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_1vtz1kj"
  style={Object {}}
>
  HeadingSmall
</h4>
`;

exports[`Storyshots Typography/HeadingSmall light on dark 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingSmall_1vtz1kj-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  HeadingSmall
</h4>
`;

exports[`Storyshots Typography/HeadingXSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_3f6s5f"
  style={Object {}}
>
  HeadingXSmall
</h5>
`;

exports[`Storyshots Typography/HeadingXSmall default 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_3f6s5f"
  style={Object {}}
>
  HeadingXSmall
</h4>
`;

exports[`Storyshots Typography/HeadingXSmall light on dark 1`] = `
<h4
  className="text_f1191h-o_O-header_1sc4ubv-o_O-HeadingXSmall_3f6s5f-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  HeadingXSmall
</h4>
`;

exports[`Storyshots Typography/LabelLarge as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelLarge_19qk49e"
  style={Object {}}
>
  LabelLarge
</h5>
`;

exports[`Storyshots Typography/LabelLarge default 1`] = `
<span
  className="text_f1191h-o_O-LabelLarge_19qk49e"
  style={Object {}}
>
  LabelLarge
</span>
`;

exports[`Storyshots Typography/LabelLarge light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelLarge_19qk49e-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  LabelLarge
</span>
`;

exports[`Storyshots Typography/LabelMedium as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelMedium_1y2bm6p"
  style={Object {}}
>
  LabelMedium
</h5>
`;

exports[`Storyshots Typography/LabelMedium default 1`] = `
<span
  className="text_f1191h-o_O-LabelMedium_1y2bm6p"
  style={Object {}}
>
  LabelMedium
</span>
`;

exports[`Storyshots Typography/LabelMedium light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelMedium_1y2bm6p-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  LabelMedium
</span>
`;

exports[`Storyshots Typography/LabelSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelSmall_xwaspk"
  style={Object {}}
>
  LabelSmall
</h5>
`;

exports[`Storyshots Typography/LabelSmall default 1`] = `
<span
  className="text_f1191h-o_O-LabelSmall_xwaspk"
  style={Object {}}
>
  LabelSmall
</span>
`;

exports[`Storyshots Typography/LabelSmall light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelSmall_xwaspk-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  LabelSmall
</span>
`;

exports[`Storyshots Typography/LabelXSmall as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-LabelXSmall_1ot4900"
  style={Object {}}
>
  LabelXSmall
</h5>
`;

exports[`Storyshots Typography/LabelXSmall default 1`] = `
<span
  className="text_f1191h-o_O-LabelXSmall_1ot4900"
  style={Object {}}
>
  LabelXSmall
</span>
`;

exports[`Storyshots Typography/LabelXSmall light on dark 1`] = `
<span
  className="text_f1191h-o_O-LabelXSmall_1ot4900-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  LabelXSmall
</span>
`;

exports[`Storyshots Typography/Tagline as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Tagline_13wg9ps"
  style={Object {}}
>
  Tagline
</h5>
`;

exports[`Storyshots Typography/Tagline default 1`] = `
<span
  className="text_f1191h-o_O-Tagline_13wg9ps"
  style={Object {}}
>
  Tagline
</span>
`;

exports[`Storyshots Typography/Tagline light on dark 1`] = `
<span
  className="text_f1191h-o_O-Tagline_13wg9ps-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  Tagline
</span>
`;

exports[`Storyshots Typography/Title as an h5 tag 1`] = `
<h5
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_pg0x2d"
  style={Object {}}
>
  Title
</h5>
`;

exports[`Storyshots Typography/Title default 1`] = `
<h1
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_pg0x2d"
  style={Object {}}
>
  Title
</h1>
`;

exports[`Storyshots Typography/Title light on dark 1`] = `
<h1
  className="text_f1191h-o_O-header_1sc4ubv-o_O-Title_pg0x2d-o_O-lightOnDark_lsccso"
  style={Object {}}
>
  Title
</h1>
`;
